fix typo and email

--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
 
       resume: `Download my resume: <a href="resume.pdf" target="_blank" rel="noopener noreferrer">resume.pdf</a>`,
 
-      contact: `Email: sanjayhona@gmail.com
+      contact: `Email: sanjay.hona@gmail.com
 LinkedIn: https://linkedin.com/in/sanjayhona`,
 
       date: () => new Date().toString(),
 
-      whoami: `sanjay
+      whoami: `Sanjay Hona
 ROLE: DevOps/DevSecOps Engineer
-LOCATION: Ottawa, Canada`,
+LOCATION: Canada`,
 
       skills: `Skills:
 - Cloud: AWS, Azure, DigitalOcean
